tests/samples/negative/visibility/private_method_access.ax
module private_method_access;

import samplelib.visibility as visibility;

fn main() -> i32 {
    let box = visibility.make_box(1);
    return box.secret_value();
}
